--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "json-server:start": "cd ./mockdata && node generate-db.js && json-server --watch ./db.json && cd ../"
   },
   "dependencies": {
     "firebase": "^11.5.0",
@@ -38,6 +39,7 @@
     "eslint-plugin-vue": "~10.0.0",
     "jiti": "^2.4.2",
     "jsdom": "^26.0.0",
+    "json-server": "1.0.0-beta.3",
     "npm-run-all2": "^7.0.2",
     "prettier": "3.5.3",
     "typescript": "~5.8.0",
